--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "vue": "^2.3.2",
     "vue-core-image-upload": "2.1.11",
     "vue-schart": "^0.1.2",
-    "vue-router": "^2.3.1",
+    "vue-router": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
