--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "axios": "^0.15.3",
     "babel-polyfill": "^6.23.0",
+    "echarts": "^3.6.2",
     "element-ui": "1.3.1",
     "vue": "^2.3.2",
     "vue-core-image-upload": "2.1.11",
-    "vue-schart": "^0.1.2",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
