--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-polyfill": "^6.23.0",
     "echarts": "^3.6.2",
     "element-ui": "1.3.1",
+    "jquery": "^3.2.1",
     "vue": "^2.3.2",
     "vue-core-image-upload": "2.1.11",
     "vue-router": "^2.3.1"
